--- a/pcgrr/vignettes/CHANGELOG.Rmd
+++ b/pcgrr/vignettes/CHANGELOG.Rmd
@@ -46,6 +46,12 @@ sigven <- user("sigven")
 pdiakumis <- user("pdiakumis")
 ```
 
+## v2.1.3
+
+- Date: **2024-02-XX**
+
+- Implemented Grantham distance for amino acid alterations
+
 ## v2.1.2
 
 - Date: **2024-10-21**
