--- a/pcgrr/vignettes/output.Rmd
+++ b/pcgrr/vignettes/output.Rmd
@@ -90,6 +90,7 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `AMINO_ACID_END` |  Protein position indicating absolute end of amino acid altered (fetched from `Protein_position`) |
 | `Protein_position` | Relative position of amino acid in protein (picked by VEP's `--flag_pick_allele` option) |
 | `Amino_acids` | Only given if the variant affects the protein-coding sequence (picked by VEP's `--flag_pick_allele` option) |
+| `GRANTHAM_DISTANCE` | Grantham distance between the reference and variant amino acids |
 | `Codons` | The alternative codons with the variant base in upper case (picked by VEP's `--flag_pick_allele` option) |
 | `IMPACT` | Impact modifier for the consequence type (picked by VEP's `--flag_pick_allele` option) |
 | `VARIANT_CLASS` | Sequence Ontology variant class (picked by VEP's `--flag_pick_allele` option) |
@@ -133,9 +134,11 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `VEP_ALL_CSQ` | All transcript consequences (`Consequence:SYMBOL:Feature_type:Feature:BIOTYPE`) - VEP |
 | `EXONIC_STATUS` | Indicates if variant consequence type is 'exonic' or 'nonexonic'. We here define 'exonic' as any variant with either of the following consequences: `stop_gained / stop_lost`, `start_lost`, `frameshift_variant`, `missense_variant`, `splice_donor_variant`, `splice_acceptor_variant`, `inframe_insertion / inframe_deletion`, `synonymous_variant`, `start_retained`, `stop_retained`, `protein_altering` |
 | `CODING_STATUS` | Indicates if primary variant consequence type is 'coding' or 'noncoding' (wrt. protein-alteration). 'coding' variants are here defined as those with an 'exonic' status, with the exception of synonymous variants |
-| `NULL_VARIANT` | Primary variant consequence type is `frameshift` or `stop_gained`/`stop_lost` |
-| `LOSS_OF_FUNCTION` | Loss-of-function variant |
-| `LOF_FILTER` | Loss-of-function filter |
+| `EXONIC_STATUS` | Indicates if variant consequence type is 'exonic' or 'nonexonic'. We define 'exonic' as any variants with the following consequence types: `stop_gained / stop_lost`, `start_lost`, `frameshift_variant`, `missense_variant`, `splice_donor_variant`, `splice_acceptor_variant`, `inframe_insertion / inframe_deletion`, `synonymous_variant`, `protein_altering` |
+| `CODING_STATUS` | Indicates if primary variant consequence type is 'coding' or 'noncoding'. 'coding' variants are here defined as those consequence types with an 'exonic' status, with the exception of synonymous variants. All other consequence types are considered 'noncoding' |
+| `NULL_VARIANT` | Primary variant consequence type is `frameshift` or `stop_gained` |
+| `LOSS_OF_FUNCTION` | Loss-of-function variant - primary variant consequence being either `stop_gained / stop_lost`, `start_lost`, `frameshift_variant`, `splice_donor_variant`, or `splice_acceptor_variant` |
+| `LOF_FILTER` | Loss-of-function filter - exceptions to putative LOF variants - GC to GT at splice donor sites or truncations within the last 5% of coding sequence |
 | `SPLICE_DONOR_RELEVANT` | Logical indicating if variant is located at a particular location near the splice donor site (`+3A/G`, `+4A` or `+5G`) |
 | `REGULATORY_ANNOTATION` | Comma-separated list of all variant annotations of `Feature_type`, `RegulatoryFeature`, and `MotifFeature`. Format (separated by a `|`): `<Consequence>`, `<Feature_type>`, `<Feature>`, `<BIOTYPE>`, `<MOTIF_NAME>`, `<MOTIF_POS>`, `<HIGH_INF_POS>`, `<MOTIF_SCORE_CHANGE>`, `<TRANSCRIPTION_FACTORS>` |
 
@@ -185,32 +188,33 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `MUTATION_HOTSPOT_CANCERTYPE` | hotspot-associated cancer types (from cancerhotspots.org) |
 | `PFAM_DOMAIN` | Pfam domain identifier (from VEP) |
 | `INTOGEN_DRIVER_MUT` | Indicates if existing variant is predicted as driver mutation from IntoGen Catalog of Driver Mutations |
-| `EFFECT_PREDICTIONS` | All predictions of effect of variant on protein function and pre-mRNA splicing from [database of non-synonymous functional predictions - dbNSFP v4.8/dbscSNV](https://sites.google.com/site/jpopgen/dbNSFP). Predicted effects are provided by different sources/algorithms (separated by `&`), `T` = Tolerated, `N` = Neutral, `D` = Damaging: 1.[SIFT](https://sift.bii.a-star.edu.sg/), 2.[MutationTaster](http://www.mutationtaster.org/) (data release Nov 2015), 3.[MutationAssessor](http://mutationassessor.org/) (release 3), 4.[FATHMM](http://fathmm.biocompute.org.uk) (v2.3), 5.[PROVEAN](http://provean.jcvi.org/index.php) (v1.1 Jan 2015), 6.[FATHMM\_MKL](http://fathmm.biocompute.org.uk/fathmmMKL.htm), 7.[PRIMATEAI](https://www.nature.com/articles/s41588-018-0167-z), 8.[DEOGEN2](https://www.ncbi.nlm.nih.gov/pmc/articles/PMC5570203/), 9.[DBNSFP\_CONSENSUS\_RNN](https://www.biorxiv.org/content/10.1101/2021.04.09.438706v1) (Ensembl/consensus prediction, based on deep learning), 10.[SPLICE\_SITE\_EFFECT\_ADA](http://nar.oxfordjournals.org/content/42/22/13534) (Ensembl/consensus prediction of splice-altering SNVs, based on adaptive boosting), 11.[SPLICE\_SITE\_EFFECT\_RF](http://nar.oxfordjournals.org/content/42/22/13534) (Ensembl/consensus prediction of splice-altering SNVs, based on random forest), 12.[M-CAP](http://bejerano.stanford.edu/MCAP), 13.[MutPred](http://mutpred.mutdb.org), 14.[GERP](http://mendel.stanford.edu/SidowLab/downloads/gerp/), 15.[BayesDel](https://doi.org/10.1002/humu.23158), 16.[LIST-S2](https://doi.org/10.1093/nar/gkaa288), 17.[ALoFT](https://www.nature.com/articles/s41467-017-00443-5),
-18.[AlphaMissense](https://console.cloud.google.com/storage/browser/dm_alphamissense),
-19.[ESM1b](https://huggingface.co/spaces/ntranoslab/esm_variants/tree/main),
-20.[PHACTboost](https://github.com/CompGenomeLab/PHACTboost),
-21.[MutFormer](https://github.com/WGLab/mutformer)|
+| `EFFECT_PREDICTIONS` | Insilico predictions variant effect on protein function and pre-mRNA splicing from [database of non-synonymous functional predictions - dbNSFP v5.0](https://www.dbnsfp.org/). Predicted effects are provided by different sources/algorithms (separated by `&`), `T` = Tolerated, `N` = Neutral, `D` = Damaging |
 | `DBNSFP_BAYESDEL_ADDAF` | predicted effect from BayesDel (dbNSFP) |
 | `DBNSFP_LIST_S2` | predicted effect from LIST-S2 (dbNSFP) |
 | `DBNSFP_SIFT` | predicted effect from SIFT (dbNSFP) |
+| `DBNSFP_POLYPHEN2_HVAR` | predicted effect from PolyPhen2 (dbNSFP) |
 | `DBNSFP_PROVEAN` | predicted effect from PROVEAN (dbNSFP) |
-| `DBNSFP_MUTATIONTASTER` | predicted effect from MutationTaster (dbNSFP) |
-| `DBNSFP_MUTATIONASSESSOR` | predicted effect from MutationAssessor (dbNSFP) |
+| `DBNSFP_MUTATIONTASTER` | predicted effect from MUTATIONTASTER (dbNSFP) |
+| `DBNSFP_MUTATIONASSESSOR` | predicted effect from MUTATIONASSESSOR (dbNSFP) |
 | `DBNSFP_M_CAP` | predicted effect from M-CAP (dbNSFP) |
-| `DBNSFP_ALOFTPRED` | predicted effect from ALoFT (dbNSFP) |
-| `DBNSFP_MUTPRED` | score from MutPred (dbNSFP) |
-| `DBNSFP_FATHMM` | predicted effect from FATHMM (dbNSFP) |
-| `DBNSFP_PRIMATEAI` | predicted effect from PrimateAI (dbNSFP) |
-| `DBNSFP_DEOGEN2` | predicted effect from deogen2 (dbNSFP) |
+| `DBNSFP_ALOFT` | predicted effect from ALoFT (dbNSFP) |
+| `DBNSFP_MUTPRED` | score from MUTPRED (dbNSFP) |
+| `DBNSFP_CLINPRED` | predicted effect from ClinPred (dbNSFP) |
+| `DBNSFP_FATHMM` | predicted effect from FATHMM-XF (dbNSFP) |
+| `DBNSFP_PRIMATEAI` | predicted effect from PRIMATEAI (dbNSFP) |
+| `DBNSFP_DEOGEN2` | predicted effect from DEOGEN2 (dbNSFP) |
 | `DBNSFP_PHACTBOOST` | predicted effect from PHACTboost (dbNSFP) |
 | `DBNSFP_ALPHA_MISSENSE` | predicted effect from AlphaMissense (dbNSFP) |
 | `DBNSFP_MUTFORMER` | predicted effect from MutFormer (dbNSFP) |
 | `DBNSFP_ESM1B` | predicted effect from ESM1b (dbNSFP) |
 | `DBNSFP_GERP` | evolutionary constraint measure from GERP (dbNSFP) |
-| `DBNSFP_FATHMM_MKL` | predicted effect from FATHMM-mkl (dbNSFP) |
+| `DBNSFP_CADD` | Combined Annotation Dependent Depletion (CADD) score (dbNSFP) |
+| `DBNSFP_VEST4` | VEST4 score (dbNSFP) |
+| `DBNSFP_FATHMM_XF` | predicted effect from FATHMM-XF (dbNSFP) |
 | `DBNSFP_META_RNN` | predicted effect from ensemble prediction (deep learning - dbNSFP) |
 | `DBNSFP_SPLICE_SITE_RF` | predicted effect of splice site disruption, using random forest (dbscSNV) |
 | `DBNSFP_SPLICE_SITE_ADA` | predicted effect of splice site disruption, using boosting (dbscSNV) |
+
 
 ##### _Variant frequencies/annotations in germline/somatic databases_
 
@@ -245,7 +249,8 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 | `CLINVAR_MEDGEN_CUI_SOMATIC` | Associated [MedGen](https://www.ncbi.nlm.nih.gov/medgen/)  concept identifiers (_CUIs_) - somatic state-of-origin |
 | `CLINVAR_VARIANT_ORIGIN` | Origin of variant (somatic, germline, de novo etc.) for variant in [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar) |
 | `CLINVAR_REVIEW_STATUS_STARS` | Rating of the [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar) variant (0-4 stars) with respect to level of review |
-| `CLINVAR_KNOWN_ONCOGENIC` | Variant matches with known oncogenic variants in [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar), through ClinGen/CGC/VICC SOP. Format: <symbol>|<hgvsp>|<hgvsc>|<oncogenicity_class>|<match_type>. Example: NRAS|p.Q61R|c.182A>G|Oncogenic|by_genomic_coord&by_hgvsc_principal&by_hgvsp_principal |
+| `KNOWN_ONCOGENIC` | Variant matches with known oncogenic variants in [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar), through ClinGen/CGC/VICC SOP. Format: <symbol>|<hgvsp>|<hgvsc>|<oncogenicity_class>|<match_type>. Example: NRAS|p.Q61R|c.182A>G|Oncogenic|by_genomic_coord&by_hgvsc_principal&by_hgvsp_principal |
+| `KNOWN_ONCOGENIC_SITE` | Variant matches with known oncogenic site/codon in [ClinVar](http://www.ncbi.nlm.nih.gov/clinvar), through ClinGen/CGC/VICC SOP. The variant must have approximately the same Grantham distance as the one recorded for the oncogenic site. Format: <symbol>|<hgvsp>|<hgvsc>|<oncogenicity_class>|<match_type>. Example: NRAS|p.Q61R|c.182A>G|Oncogenic|by_genomic_coord&by_hgvsc_principal&by_hgvsp_principal |
 
 ##### _Other_
 
@@ -253,7 +258,7 @@ A VCF file containing annotated, somatic calls (single nucleotide variants and i
 |-----|-------------|
 | `BIOMARKER_MATCH` | Variant matches with biomarker evidence in CIViC/CGI. Format: <db_source>\|<db_variant_id>\|<db_evidence_id>:<tumor_site>:<clinical_significance>:<evidence_level>:<evidence_type><germline_somatic>\|<matching_type>. Multiple evidence items are separated by '&'. Example: civic|174|EID445:Colon/Rectum:Sensitivity/Response:D:Predictive:Somatic&EID446:Colon/Rectum:Sensitivity/Response:D:Predictive:Somatic|by_gene_mut. Matching type can be any of `by_genomic_coord`, `by_hgvsp_principal`, `by_hgvsc_principal`,  `by_hgvsp_nonprincipal`, `by_hgvsc_nonprincipal`, `by_codon_principal`, `by_exon_mut_principal`, `by_gene_mut_lof`, `by_gene_mut` |
 | `ONCOGENICITY` | Oncogenicity annotation - ClinGen/CGC/VICC SOP implementation |
-| `ONCOGENICITY_CODE` | Oncogenicity code - ClinGen/CGC/VICC SOP implementation |
+| `ONCOGENICITY_CODE` | Oncogenicity code(s) - ClinGen/CGC/VICC SOP implementation |
 | `ONCOGENICITY_SCORE` | Oncogenicity score - ClinGen/CGC/VICC SOP implementation |
 
 #### 2. Tab-separated values (TSV)
