--- a/pcgrr/inst/templates/pcgr_quarto_report/mutational_burden.qmd
+++ b/pcgrr/inst/templates/pcgr_quarto_report/mutational_burden.qmd
@@ -1,6 +1,6 @@
 ## Tumor mutational burden (TMB)
 
-PCGR estimates TMB in three different ways, depending on the type of variants to include in the calculation (specifically abbreviated as __coding_non_silent__, __coding_and_silent__, and __missense_only__, see details outlined in the [Documentation](#Documentation)). Only results from one of these methods are highlighted here, as configured by the user. 
+PCGR estimates TMB in three different ways, depending on the type of variants to include in the calculation (specifically abbreviated as __coding_non_silent__, __coding_and_silent__, and __missense_only__, see details outlined in the [Documentation](#documentation)). Only results from one of these methods are highlighted here, as configured by the user. 
 
 ```{r tmb_var_filtering}
 #| echo: false
