--- a/pcgrr/vignettes/CHANGELOG.Rmd
+++ b/pcgrr/vignettes/CHANGELOG.Rmd
@@ -47,13 +47,13 @@ pdiakumis <- user("pdiakumis")
 ```
 
 
-## v2.1.3
+## v2.2.0
 
-- Date: **2025-02-24**
+- Date: **2025-03-XX**
 - Major data updates
   - ClinVar (2025-02)
   - dbNSFP (v5.0)
-  - CIViC (2025-02-08)
+  - CIViC (2025-02-27)
   - GENCODE v47 (VEP v113)
   - PanelApp (2025-02)
   - UniProt KB (2025-01)
@@ -66,6 +66,7 @@ for oncogenicity classification
 - Multiple cosmetic changes to HTML report - e.g. collapsed call-outs
 - Added oncogenicity documentation in variant tables of HTML report (indicates which criteria that was matched for a given variant)
 - Removed `VEP_ALL_CSQ` from variant tables in HTML report to reduce file size - still available in TSV output
+- Added MutSpliceDB splice site effects (used e.g. for loss-of-function annotation)
 - Added more prediction algorithms from dbNSFP
 - Fixed bug that caused crash for missing values in DP/AF values of input VCF
 - Fixed erroneous re-formatting of MAF integer columns to floats
